--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section>
-            <img src="images/puppy-full.jpg" alt="A white puppy standing in short grass">
+            <img srcset="images/puppy-2.0.jpg 2x" srcset="images/puppy-3.0.jpg 3x" src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
         </section>
     </main>
     <footer>
