--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
           
           src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">>
         </section>
+        <section>
+          <!-- the srcset attribtue is great for showing the same image at different sizes
+           the picture tag is for showing a different image at different sizes -->
+           <picture>
+            <source srcset="images/puppy-1200.jpg"
+                    media="(min-width:1240px)">
+
+            <source srcset="images/puppy-900.jpg"
+                    media="(min-width:940px)">
+
+            <source srcset="images/puppy-600.jpg"
+                    media="(max-width:9390px)">
+
+            <img src="images/puppy-600.jpg" alt="A white puppy standing in shoty grass">
+           </picture>
+        </section>
     </main>
     <footer>
         <p>Image by <a href="https://pixabay.com/users/cparks-1593059/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5124947">Cindy Parks</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5124947">Pixabay</a></p>
